...
          .accessibilityLabel("Custom Settings")
          Button {
            viewModel.showingSwipeConfiguration = true
          } label: {
            Image(systemName: "slider.horizontal.3")
          }
          .accessibilityIdentifier("ConfigureSwipeActions")
          .accessibilityLabel("Configure Swipe Actions")
        }
      }
    }
    .refreshable {
      await refreshEpisodes()
...
